 * Fix: Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
 * Fix: Fixed occurences of invalid HTML across the CMS admin (Thibaud Colas)
 * Fix: Admin HTML now includes the correct `dir` attribute for the active language (Andreas Bernacca)
 * Fix: Fix type error when using `--chunk_size` argument on `./manage.py update_index` (Seb Brown)


2.5.1 (07.05.2019)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent crash when comparing StructBlocks in revision history (Adrian Turjak, Matt Westcott)


2.5 (24.04.2019)
~~~~~~~~~~~~~~~~

 * Django 2.2 support (Matt Westcott, Andy Babic)
 * Added support for customising EditHandler-based forms on a per-request basis (Bertrand Bordage)
 * Added more informative error message when `|richtext` filter is applied to a non-string value (mukesh5)
 * Automatic search indexing can now be disabled on a per-model basis via the `search_auto_update` attribute (Karl Hobley)
 * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
 * Highlight broken links to pages and missing documents in rich text (Brady Moe)
 * Preserve links when copy-pasting rich text content from Wagtail to other tools (Thibaud Colas)
 * Rich text to contentstate conversion now prioritises more specific rules, to accommodate `<p>` and `<br>` elements with attributes (Matt Westcott)
 * Added limit image upload size by number of pixels (Thomas Elliott)
 * Added `manage.py wagtail_update_index` alias to avoid clashes with `update_index` commands from other packages (Matt Westcott)
 * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
 * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
 * Add Learn Wagtail to third-party tutorials in documentation (Matt Westcott)
 * Add a Django setting `TAG_LIMIT` to limit number of tags that can be added to any taggit model (Mani)